--- a/test2/CMakeLists.txt
+++ b/test2/CMakeLists.txt
@@ -31,7 +31,7 @@ rosbuild_prepare_qt4(QtCore QtGui) # Add the appropriate components to the compo
 #  I  don't konw how to change the file to make it build the manualdialog's source file
 file(GLOB QT_FORMS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ui/*.ui)
 file(GLOB QT_RESOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} resources/*.qrc)
-file(GLOB_RECURSE QT_MOC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS include/test2/*.hpp)
+file(GLOB_RECURSE QT_MOC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS include/test2/*.hpp *.h)
 
 
 QT4_ADD_RESOURCES(QT_RESOURCES_CPP ${QT_RESOURCES})
